--- a/extra/slovoved.conf
+++ b/extra/slovoved.conf
@@ -1,8 +1,8 @@
-[program:travelmordovia]
-command = /opt/travelmordovia/extra/run_website.sh
-user=ck
+[program:slovoved]
+command = /var/www/slovoved/extra/run_website.sh
+user=cyberkolhoz
 numprocs=1
-stdout_logfile=/var/log/travelmordovia/website.log
+stdout_logfile=/var/log/slovoved/website.log
 redirect_stderr = true
 autostart=true
 autorestart=true
