--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Django==2.2.4
 gunicorn==19.9.0
-psycopg2-binary==2.7.5
+psycopg2-binary==2.8.3
 sentry-sdk==0.4.3
 bs4==0.0.1
 lxml==4.2.5
-requests==2.21.0
+requests==2.22.0
+Celery==4.3.0
